simple-flask-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-app-service
spec:
  selector:
    app: simple-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
